Issue #SB-25202 Correction of alignment issues and styling modal in Portal

--- a/src/app/client/src/app/modules/explore-page/components/explore-page/explore-page.component.scss
+++ b/src/app/client/src/app/modules/explore-page/components/explore-page/explore-page.component.scss
@@ -1,28 +1,31 @@
+@import "variables";
+@import "mixins/mixins";
+
 .course-card-width {
-  width: 280px !important;
+  width: calculateRem(280px) !important;
 }
 .sb-section-preference {
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color:var(--sbt-body-bg);
-  padding: 2rem;
-  border-radius: 1.5rem;
+  padding: calculateRem(32px);
+  border-radius: calculateRem(24px);
   position: relative;
   overflow: hidden;
-  margin-top:2rem;
+  margin-top:calculateRem(32px);
 
-  @media screen and (max-width: 768px){
+  @include respond-below(sm) {
     flex-wrap: wrap;
   }
     .preference {
       position: relative;
       z-index: 1;
       .header {
-        font-size: 1rem;
+        font-size: calculateRem(16px);
       }
       p, span {
-        font-size: 0.8rem;
+        font-size:calculateRem(12px);
       }
       p {
         margin-bottom: 0;
@@ -34,16 +37,16 @@
     .change-preference {
       position: relative;
       z-index: 1;
-      @media screen and (max-width: 768px){
-        padding-top: 0.5rem;
+      @include respond-below(sm) {
+        padding-top: calculateRem(8px);
       }
     }
     svg {
       position: absolute;
-      right: 32px;
+      right: calculateRem(32px);
       left: inherit;
       top: inherit;
-      bottom: -16px;
+      bottom: calculateRem(-16px);
       opacity: 0.55;
       width: 180px;
       height: auto;
@@ -53,7 +56,7 @@
     }
 }
 .section-hr {
-  border: 0.5px solid #dad9cb;
+  border: calculateRem(0.5px) solid var(--rc-dad9cb);
 }
 .no-background {
   background: none;
